syntax = "proto3";

package Maths;

option go_package = "gen/MathService;MathService";

service MathService {
    rpc Add (AddRequest) returns (AddResponse); 
}

message AddRequest{
    string op1 = 1;
    string op2 = 2;
}

message AddResponse{
    string ans = 1;
}